tests/ui/attribute/non_function.rs
use vibecode::vibecode;

#[vibecode]
struct NotAFunction {
    field: u32,
}

fn main() {}
